--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,21 @@ __pycache__/
 #Compiled adapters
 llama3.1-retail-adapter/
 lora-llama3.1-retail/
-adapters/
+adapters/*
 lora-tiny-llama3.1-retail/
 test_results.txt
 trening.pbs
+trening1.pbs
 testiranje.pbs
+lora-deepseek-checkpoints
+lora-gemma-checkpoints
+lora-granite-checkpoints
+treniranje_adaptera.*
+adapteri_test.*
+/results
+/lora-llama3-checkpoints
+/lora-llama3.1-checkpoints
+/lora-qwen3-checkpoints
 
 # C extensions
 *.so
@@ -221,3 +231,5 @@ adapters.rar
 testiranje.pbs
 .gitignore
 .gitignore
+torch.def
+torch.def
